Bug 441152 - Actual size shortcut behaviour has changed
Summary: Actual size shortcut behaviour has changed
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords: regression
: 441158 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-19 03:02 UTC by Steve Swanson
Modified: 2021-09-15 12:44 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Steve Swanson 2021-08-19 03:02:20 UTC
SUMMARY

Before the upgrading to 21.08.0, I was able to switch the view from "Zoom to Fit" to "Actual Size" by using the "F" keyboard shortcut. This would also center the Actual Size view on the mouse position, so if I wanted to see a particular portion of an image in Actual Size I could view the full image, move the mouse to the area I was interested in, and then switch to Actual Size via keyboard shortcut to see it in detail. I could then use the same keyboard shortcut to zoom back out and view the entire image.


STEPS TO REPRODUCE
1. Move mouse to portion of image I'm interested in seeing in Actual Size
2. Use the keyboard shortcut to switch to Actual Size
3. (Optionally) use keyboard shortcut to switch back to Fit

OBSERVED RESULT
In step 2, image is shown in Actual Size but ignores mouse position
In step 3, keyboard shortcut no longer works as a toggle (must use 2 different keyboard shortcuts)

EXPECTED RESULT
Work the way it used to: I move mouse to a part of the image, hit the "F" key and the view changes to Actual Size centered on that part of the image. Hitting "F" key again toggles back to the Fit view.

Oddly enough, if I use the middle mouse button to switch to Actual Size, it works like it used to. Maybe the easiest solution would be to add a keyboard shortcut for whatever the middle mouse button does?


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Paul Worrall 2021-08-19 13:08:13 UTC
*** Bug 441158 has been marked as a duplicate of this bug. ***
Comment 2 popov895 2021-09-01 10:46:24 UTC
Is there any progress on this issue?
Comment 3 Bug Janitor Service 2021-09-01 15:02:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/gwenview/-/merge_requests/100
Comment 4 popov895 2021-09-15 12:44:04 UTC
Git commit 9fe7417f89d3dfab9a92219bc579bcf5a6ea0bea by Eugene Popov.
Committed on 14/09/2021 at 08:39.
Pushed by felixernst into branch 'release/21.08'.

Restore the ability to quickly switch between "Zoom to Fit" and "Actual Size" with a keyboard shortcut

This MR restore the ability to quickly switch between "Zoom to Fit" and "Actual Size" (as well as between "Zoom to Fill" and "Actual Size") with a keyboard shortcut that was lost after one of the improvements.

M  +3    -2    lib/documentview/documentview.h
M  +3    -7    lib/documentview/documentviewcontroller.cpp
M  +1    -3    lib/zoomcombobox/zoomcombobox.cpp

https://invent.kde.org/graphics/gwenview/commit/9fe7417f89d3dfab9a92219bc579bcf5a6ea0bea