Restore the ability to quickly switch between "Zoom to Fit" and "Actual Size" with a keyboard shortcut

This MR restore the ability to quickly switch between "Zoom to Fit" and "Actual Size" (as well as between "Zoom to Fill" and "Actual Size") with a keyboard shortcut that was lost after one of the improvements.

BUG: 441152